knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Event__x/Event__x.object-meta.xml
<CustomObject>
    <externalDataSource>CORP_Org</externalDataSource>
    <externalName>Event</externalName>
    <label>Event</label>
    <pluralLabel>Events</pluralLabel>
</CustomObject>