knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Event__x/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <externalDeveloperName>AccountId</externalDeveloperName>
    <label>Account / Hospital</label>
    <length>18</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>