knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Event__x/fields/ActivityDateTime__c.field-meta.xml
<CustomField>
    <fullName>ActivityDateTime__c</fullName>
    <externalDeveloperName>ActivityDateTime</externalDeveloperName>
    <label>Due Date Time</label>
    <type>DateTime</type>
</CustomField>