knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Event__x/fields/Approval_Requirements_c__c.field-meta.xml
<CustomField>
    <fullName>Approval_Requirements_c__c</fullName>
    <externalDeveloperName>Approval_Requirements__c</externalDeveloperName>
    <label>Approval Requirements</label>
    <type>TextArea</type>
</CustomField>