knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Event__x/fields/Approved_By2_c__c.field-meta.xml
<CustomField>
    <fullName>Approved_By2_c__c</fullName>
    <externalDeveloperName>Approved_By2__c</externalDeveloperName>
    <label>Approved By2</label>
    <length>80</length>
    <type>Text</type>
</CustomField>