knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Event__x/fields/ChatterConnect_Comment_Id_c__c.field-meta.xml
<CustomField>
    <fullName>ChatterConnect_Comment_Id_c__c</fullName>
    <externalDeveloperName>ChatterConnect_Comment_Id__c</externalDeveloperName>
    <label>ChatterConnect Comment Id</label>
    <length>200</length>
    <type>Text</type>
</CustomField>