knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Event__x/fields/Cover_Letter_Additions_c__c.field-meta.xml
<CustomField>
    <fullName>Cover_Letter_Additions_c__c</fullName>
    <externalDeveloperName>Cover_Letter_Additions__c</externalDeveloperName>
    <label>Cover Letter Additions</label>
    <length>100</length>
    <type>Text</type>
</CustomField>