knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Event__x/fields/CurrentShift_c__c.field-meta.xml
<CustomField>
    <fullName>CurrentShift_c__c</fullName>
    <externalDeveloperName>CurrentShift__c</externalDeveloperName>
    <label>Current Shift Detail</label>
    <type>TextArea</type>
</CustomField>