knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Event__x/fields/Decline_Reason_Detail_c__c.field-meta.xml
<CustomField>
    <fullName>Decline_Reason_Detail_c__c</fullName>
    <externalDeveloperName>Decline_Reason_Detail__c</externalDeveloperName>
    <label>Decline Reason Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>