knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Event__x/fields/Declined_Reason_c__c.field-meta.xml
<CustomField>
    <fullName>Declined_Reason_c__c</fullName>
    <externalDeveloperName>Declined_Reason__c</externalDeveloperName>
    <label>Declined Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>