knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Event__x/fields/Exec_Private_Comment_c__c.field-meta.xml
<CustomField>
    <fullName>Exec_Private_Comment_c__c</fullName>
    <externalDeveloperName>Exec_Private_Comment__c</externalDeveloperName>
    <label>Executive Private Comment</label>
    <length>254</length>
    <type>Text</type>
</CustomField>