knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Event__x/fields/GroupEventType__c.field-meta.xml
<CustomField>
    <fullName>GroupEventType__c</fullName>
    <externalDeveloperName>GroupEventType</externalDeveloperName>
    <label>Group Event Type</label>
    <length>40</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>