knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Event__x/fields/IsGroupEvent__c.field-meta.xml
<CustomField>
    <fullName>IsGroupEvent__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>IsGroupEvent</externalDeveloperName>
    <label>Is Group Event</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Checkbox</type>
</CustomField>