knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Event__x/fields/IsPrivate__c.field-meta.xml
<CustomField>
    <fullName>IsPrivate__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>IsPrivate</externalDeveloperName>
    <label>Private</label>
    <type>Checkbox</type>
</CustomField>