knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Event__x/fields/IsRecurrence__c.field-meta.xml
<CustomField>
    <fullName>IsRecurrence__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>IsRecurrence</externalDeveloperName>
    <label>Create Recurring Series of Events</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Checkbox</type>
</CustomField>