knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Event__x/fields/IsRecurring_c__c.field-meta.xml
<CustomField>
    <fullName>IsRecurring_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>IsRecurring__c</externalDeveloperName>
    <label>Is Recurring</label>
    <type>Checkbox</type>
</CustomField>