knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Event__x/fields/Legacy_System_Create_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Legacy_System_Create_Date_c__c</fullName>
    <externalDeveloperName>Legacy_System_Create_Date__c</externalDeveloperName>
    <label>Legacy Create</label>
    <type>DateTime</type>
</CustomField>