knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Event__x/fields/Mode_of_Transmission_c__c.field-meta.xml
<CustomField>
    <fullName>Mode_of_Transmission_c__c</fullName>
    <externalDeveloperName>Mode_of_Transmission__c</externalDeveloperName>
    <label>Mode of Transmission</label>
    <length>255</length>
    <type>Text</type>
</CustomField>