knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Event__x/fields/NewShift_c__c.field-meta.xml
<CustomField>
    <fullName>NewShift_c__c</fullName>
    <externalDeveloperName>NewShift__c</externalDeveloperName>
    <label>New Shift Detail</label>
    <type>TextArea</type>
</CustomField>