knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Event__x/fields/Number_of_Leads_from_Event_c__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Leads_from_Event_c__c</fullName>
    <externalDeveloperName>Number_of_Leads_from_Event__c</externalDeveloperName>
    <label>Number of Leads from Event</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>