knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Event__x/fields/Outgoing_Airbill_c__c.field-meta.xml
<CustomField>
    <fullName>Outgoing_Airbill_c__c</fullName>
    <externalDeveloperName>Outgoing_Airbill__c</externalDeveloperName>
    <label>Outgoing Airbill #</label>
    <length>80</length>
    <type>Text</type>
</CustomField>