knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Event__x/fields/Priority_Hospital_c__c.field-meta.xml
<CustomField>
    <fullName>Priority_Hospital_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Priority_Hospital__c</externalDeveloperName>
    <label>Priority Hospital</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Checkbox</type>
</CustomField>