knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Event__x/fields/Reason_Type_c__c.field-meta.xml
<CustomField>
    <fullName>Reason_Type_c__c</fullName>
    <externalDeveloperName>Reason_Type__c</externalDeveloperName>
    <label>Reason Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>