knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Event__x/fields/RecurrenceInstance__c.field-meta.xml
<CustomField>
    <fullName>RecurrenceInstance__c</fullName>
    <externalDeveloperName>RecurrenceInstance</externalDeveloperName>
    <label>Recurrence Instance</label>
    <length>40</length>
    <type>Text</type>
</CustomField>