knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Event__x/fields/RecurrenceStartDateTime__c.field-meta.xml
<CustomField>
    <fullName>RecurrenceStartDateTime__c</fullName>
    <externalDeveloperName>RecurrenceStartDateTime</externalDeveloperName>
    <label>Start Date</label>
    <type>DateTime</type>
</CustomField>