knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Event__x/fields/RecurrenceTimeZoneSidKey__c.field-meta.xml
<CustomField>
    <fullName>RecurrenceTimeZoneSidKey__c</fullName>
    <externalDeveloperName>RecurrenceTimeZoneSidKey</externalDeveloperName>
    <label>Recurrence Time Zone</label>
    <length>40</length>
    <type>Text</type>
</CustomField>