knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Event__x/fields/RecurrenceType__c.field-meta.xml
<CustomField>
    <fullName>RecurrenceType__c</fullName>
    <externalDeveloperName>RecurrenceType</externalDeveloperName>
    <label>Recurrence Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>