knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Event__x/fields/Request_Approved_c__c.field-meta.xml
<CustomField>
    <fullName>Request_Approved_c__c</fullName>
    <externalDeveloperName>Request_Approved__c</externalDeveloperName>
    <label>Request Approved</label>
    <length>255</length>
    <type>Text</type>
</CustomField>