knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Event__x/fields/ShowAs__c.field-meta.xml
<CustomField>
    <fullName>ShowAs__c</fullName>
    <externalDeveloperName>ShowAs</externalDeveloperName>
    <label>Show Time As</label>
    <length>40</length>
    <type>Text</type>
</CustomField>