knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Event__x/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <externalDeveloperName>Subject</externalDeveloperName>
    <label>Subject</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>