knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Event__x/fields/Task_Created_Time_c__c.field-meta.xml
<CustomField>
    <fullName>Task_Created_Time_c__c</fullName>
    <externalDeveloperName>Task_Created_Time__c</externalDeveloperName>
    <label>Task Created Time (CST)</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>