knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Event__x/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <externalDeveloperName>Type</externalDeveloperName>
    <label>Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>