knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Event__x/fields/WhoId__c.field-meta.xml
<CustomField>
    <fullName>WhoId__c</fullName>
    <externalDeveloperName>WhoId</externalDeveloperName>
    <label>Name ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>